--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,4 +6,5 @@
             <li><%= link_to post.title, post_path(post.id) %></li>
         <% end %>
     </ul>
+    <%= link_to "Create new post", new_post_path %>
 </div>
